--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 android {
     namespace 'com.po.photoalbum'
-    compileSdk 33
+    compileSdk 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -57,15 +57,15 @@ android {
 
 dependencies {
 
-    implementation "androidx.compose.material3:material3:1.0.0-alpha14"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-alpha14"
+    implementation "androidx.compose.material3:material3:1.2.0-alpha11"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.0-alpha11"
 
     // Compose
-    implementation 'androidx.compose.ui:ui:1.3.0-alpha02'
-    implementation "androidx.compose.ui:ui-tooling-preview:1.2.0"
+    implementation 'androidx.compose.ui:ui:1.6.0-beta01'
+    implementation "androidx.compose.ui:ui-tooling-preview:1.5.4"
 
     // Compose Navigation
-    implementation 'androidx.navigation:navigation-compose:2.5.1'
+    implementation 'androidx.navigation:navigation-compose:2.7.5'
 
     // Compose Navigation Animation
     implementation "com.google.accompanist:accompanist-navigation-animation:0.16.0"
@@ -74,9 +74,9 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.24.13-rc'
 
     //core
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.activity:activity-compose:1.8.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
     //multidex
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -98,10 +98,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5'
 
     // Coil image library
-    implementation "io.coil-kt:coil-compose:2.2.2"
+    implementation "io.coil-kt:coil-compose:2.4.0"
 
-    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-alpha02"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-alpha02"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.6.0-beta01"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.6.0-beta01"
 
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
 
@@ -109,6 +109,11 @@ dependencies {
 
     // Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-auth:21.0.5")
     implementation("com.google.firebase:firebase-auth-ktx")
+
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.9.1'
+    implementation 'com.google.firebase:firebase-appcheck:17.1.1'
+
 
 }
