--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,7 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
 
-
+    implementation "com.airbnb.android:lottie-compose:6.0.0"
 
     // Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
